--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </p>
       </div>
       <div class="section-3-flex">
-        <img class="section-3Img" src="images/familiar-features..svg" alt="">
+        <img class="section-3Img" src="images/familiar-features.svg" alt="">
         <h5>familiar-features</h5>
         <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.
   </p>
